--- a/server/public/main.css
+++ b/server/public/main.css
@@ -25,19 +25,27 @@ body {
 }
 
 .list__container > div {
-  width: 30%;
+  width: 25%;
   margin-bottom: 3rem;
   border: 1px solid #FF3F00;
   padding: 1rem;
   border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .list__container > div > * {
   margin-bottom: 1.5rem;
 }
 
+.list__container img {
+  width: 100%;
+  height: 70%;
+}
 
-//NavBar Style
+
+/* // NavBar Style */
 .sidenav{
 
   background-color: darkslategray;
@@ -50,5 +58,10 @@ body {
   margin-right: 10px;
 }
 
+h1 {
+  font-size: 2.5rem;
+}
 
-
+h2 {
+  font-size: 1.8rem;
+}
