--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,3 +1,7 @@
+/* Import Fonts */
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400&family=Roboto:wght@400;500;700;900&display=swap');
+
 
 /* Global Styles */
 
@@ -11,9 +15,21 @@ html {
   font-size: 62.5%;
 }
 
+
 body {
   font-size: 1.6rem;
 }
+
+h2 {
+  font-family: 'Roboto', sans-serif;
+}
+
+/* Landing Page Style */
+
+.backgroud {
+  background-color: rgb #5A2971;
+}
+
 
 
 /* Movie List Style */
@@ -37,11 +53,11 @@ body {
 }
 
 
-//NavBar Style
+/* NavBar Style */
 .sidenav{
 
-  background-color: darkslategray;
-  color: aliceblue;
+  background-color: #321142;
+  color: #864CA1;
   width: 150px;
   float: left;
   display: inline;
