--- a/server/public/main.css
+++ b/server/public/main.css
@@ -41,10 +41,10 @@ h2 {
 
   margin-left: 200px;
   padding: 1px 16px;
-  height: 1000px; 
+  height: 1000px;
 }
 
-.list__container > div {
+.list__container>div {
   width: 25%;
   margin-bottom: 3rem;
   border: 1px solid #FF3F00;
@@ -55,7 +55,7 @@ h2 {
   justify-content: space-between;
 }
 
-.list__container > div > * {
+.list__container>div>* {
   margin-bottom: 1.5rem;
 }
 
@@ -72,7 +72,7 @@ h2 {
 
 
 
-.sidenav{
+.sidenav {
 
   background-color: #321142;
   color: #864CA1;
@@ -127,49 +127,58 @@ h2 {
     height: auto;
     position: relative;
   }
-  .sidenav a {float: left;}
-  div.content {margin-left: 0;}
 
-/* serachBar style */
-
-.searchForm{
-  display: flex;
-  position: relative;
-  align-items: center;
-}
-
-.searchBar{
-  height: 40px;
-  width: 80%;
-  border:1px solid grey;
-  border-radius: 20px;
-}
-.searchBar:focus{
-  outline: none;
-}
-
-.sumbitButton{
-width: 30px;
-height: 30px;
-position: absolute;
-right:270px;
-background-color: transparent;
-border:none
-}
-
-h1 {
-  font-size: 2.5rem;
-}
-
-h2 {
-  font-size: 1.8rem;
-
-}
-
-/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
-@media screen and (max-width: 400px) {
   .sidenav a {
-    text-align: center;
-    float: none;
+    float: left;
+  }
+
+  div.content {
+    margin-left: 0;
+  }
+
+  /* serachBar style */
+
+  .searchForm {
+    display: flex;
+    position: relative;
+    align-items: center;
+  }
+
+  .searchBar {
+    height: 40px;
+    width: 80%;
+    border: 1px solid grey;
+    border-radius: 20px;
+  }
+
+  .searchBar:focus {
+    outline: none;
+  }
+
+  .sumbitButton {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 270px;
+    background-color: transparent;
+    border: none
+  }
+
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 1.8rem;
+
+  }
+
+  /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+  @media screen and (max-width: 400px) {
+
+    .sidenav a {
+      text-align: center;
+      float: none;
+    }
   }
 }
