fixed the style

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -126,7 +126,7 @@ position: absolute;
 right:10px;
 background-color: transparent;
 border:none
-
+}
 /* sidenav links */
 .sidenav a {
   display: block;
