--- a/server/public/main.css
+++ b/server/public/main.css
@@ -109,7 +109,7 @@ h2 {
   width: 80%;
   position: relative;
   align-items: center;
-  display: block;
+  display:flex;
   margin: 10px auto;
 }
 
@@ -179,7 +179,7 @@ border:none
 
   /* serachBar style */
 
-  .searchForm {
+  /* .searchForm {
     display: flex;
     position: relative;
     align-items: center;
@@ -205,7 +205,7 @@ border:none
     right: 270px;
     background-color: transparent;
     border: none
-  }
+  } */
 
   h1 {
     font-size: 2.5rem;
