--- a/server/public/main.css
+++ b/server/public/main.css
@@ -15,13 +15,36 @@ html {
   font-size: 62.5%;
 }
 
+hr {
+  border: 5px solid rgb(179, 158, 0);
+  border-radius: 5px;
+  width: 75%;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
 
 body {
   font-size: 1.6rem;
+  font-family: 'Roboto', sans-serif;
+}
+
+h1{
+  color: #431459;
+  background-color:#e7dff7;
+  padding: 10px;
+  border-radius: 15px;
 }
 
 h2 {
-  font-family: 'Roboto', sans-serif;
+  color: #ffffff;
+  font-size: 25px;
+}
+
+h3{
+  color:rgb(3, 0, 0);
+  /* background-color: rgb(255, 255, 255); */
 }
 
 /* Landing Page Style */
@@ -35,8 +58,15 @@ h2 {
   margin-left: auto;
   margin-right: auto;
   padding: 20px;
+
 }
 
+.subtitle {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 20px;
+
+}
 
 /* Movie List Style */
 .list__container {
@@ -53,7 +83,7 @@ h2 {
 }
 
 .list__container>div {
-  background-color:#e2d7fd;
+  background-color:#dacfff;
   width: 25%;
   margin-bottom: 3rem;
   border: 1px solid #ffffff;
@@ -99,7 +129,7 @@ h2 {
   height: 100%;
   overflow: auto;
   border-top-right-radius: 80px;
-  border-bottom-right-radius: 80px;
+  /* border-bottom-right-radius: 80px; */
 }
 
 
@@ -207,14 +237,7 @@ border:none
     border: none
   }
 
-  h1 {
-    font-size: 2.5rem;
-  }
 
-  h2 {
-    font-size: 1.8rem;
-
-  }
 
   /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
   @media screen and (max-width: 400px) {
