--- a/server/public/main.css
+++ b/server/public/main.css
@@ -39,7 +39,13 @@ h1{
 
 h2 {
   color: #ffffff;
-  font-size: 25px;
+  font-size: 35px;
+  background-color: rgb(155, 0, 0);
+  width: 75%;
+  display: block;
+margin-left: auto;
+margin-right: auto;
+border-radius: 10px;
 }
 
 h3{
@@ -136,7 +142,7 @@ h3{
 
 
 .searchForm{
-  width: 80%;
+  width: 75%;
   position: relative;
   align-items: center;
   display: block;
@@ -183,7 +189,10 @@ border:none
 .sidenav a:hover:not(.active) {
   background-color: #c6bcff;
   color: white;
+  
 }
+
+
 
 /* div.content {
   margin-left: 200px;
